Retitle browser pages for appearance.

--- a/webpack.html
+++ b/webpack.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux TodoMVC example</title>
+    <title>webpack dependency cycle example</title>
   </head>
   <body>
-    <div class="todoapp" id="root">
-    </div>
     <script src="/webpack.js"></script>
   </body>
 </html>
