--- a/browserify.html
+++ b/browserify.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux TodoMVC example</title>
+    <title>browserify dependency cycle example</title>
   </head>
   <body>
-    <div class="todoapp" id="root">
-    </div>
     <script src="/browserify.js"></script>
   </body>
 </html>
